[NEED FIX] Parser con contemplacion de incompletos y mejor ood.